--- a/index.html
+++ b/index.html
@@ -1,147 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <link rel="stylesheet" href="css/index.css" />
-        <link rel="stylesheet" href="css/header.css" />
-        <link rel="stylesheet" href="css/footer.css" />
-        <title>TechTitans</title>
-    </head>
-    <header>
-        <div class="header">
-            <div class="logo">
-                <img src="img/logo.png" alt="Logo" />
-                <div class="company-name">Tech Titans</div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+      <link rel="stylesheet" href="css/index.css" />
+      <link rel="stylesheet" href="css/header.css" />
+      <link rel="stylesheet" href="css/footer.css" />
+      <title>TechTitans</title>
+   </head>
+   <header>
+      <div class="header">
+         <div class="logo">
+            <img src="img/logo.png" alt="Logo" />
+            <div class="company-name">Tech Titans</div>
+         </div>
+         <div class="subpages">
+            <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
+            <a href="solutions.html" class="subpage-item">Solutions</a>
+            <a href="vision.html" class="subpage-item">Vision</a>
+            <a href="#" class="subpage-item">Software</a>
+            <a href="#" class="subpage-item">Blog</a>
+         </div>
+         <div>
+            <button class="header-button">Language</button>
+         </div>
+      </div>
+   </header>
+   <body>
+      <section>
+         <div class="welcome">
+            <img src="img/office.png" alt="card" />
+            <div class="about">
+               <h2>Welcome</h2>
+               <p>Tech Titans is here to revolutionize the world of financial and administrative software development. With our technology and experienced professionals, we make it easy to take your business to the next level.</p>
+               <p>Get ready to experience the power of Tech Titans</p>
             </div>
-            <div class="subpages">
-                <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
-                <a href="solutions.html" class="subpage-item">Solutions</a>
-                <a href="#" class="subpage-item">Vision</a>
-                <a href="#" class="subpage-item">Software</a>
-                <a href="#" class="subpage-item">Blog</a>
+         </div>
+      </section>
+      <section>
+         <div class="short-desc">
+            <p>Unlock the Power of Tech Titans'</p>
+            <p>Administrative Software</p>
+            <p>Development Services</p>
+         </div>
+         <div class="background-img">
+            <div class="background-img-inner"></div>
+         </div>
+      </section>
+      <section>
+         <div class="team">
+            <div class="content">
+               <h2><b>Our Team.</b></h2>
+               <p id="description">
+                  Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
+                  ambitious minds working collaboratively to bring your wildest dreams to life.
+               </p>
             </div>
-            <div>
-                <button class="header-button">Language</button>
+            <div class="cards">
+               <div class="column">
+                  <div class="imageBox"><img src="img/user1.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-1">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+                  <div class="imageBox"><img src="img/user2.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-2">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+                  <div class="imageBox"><img src="img/user3.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-3">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+                  <div class="imageBox"><img src="img/user4.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-4">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+               </div>
             </div>
-        </div>
-    </header>
-    <body>
-        <section>
-            <div class="welcome">
-                <img src="img/office.png" alt="card" />
-                <div class="about">
-                    <h2>Welcome</h2>
-                    <p>Tech Titans is here to revolutionize the world of financial and administrative software development. With our technology and experienced professionals, we make it easy to take your business to the next level.</p>
-                    <p>Get ready to experience the power of Tech Titans</p>
-                </div>
+         </div>
+      </section>
+      <section class="directions">
+         <div class="our-directions">
+            <p>Our direction and promising</p>
+            <p>areas of development</p>
+         </div>
+         <div class="text-cards">
+            <div class="text-block-5">
+               <p>
+                  FINANCIAL<br />
+                  SOFTWARE
+               </p>
             </div>
-        </section>
-        <section>
-            <div class="short-desc">
-                <p>Unlock the Power of Tech Titans'</p>
-                <p>Administrative Software</p>
-                <p>Development Services</p>
+            <img src="img/financial.png" alt="" />
+            <div class="text-block-6">
+               <p>
+                  ADMINISTRATIVE<br />
+                  SOFTWARE
+               </p>
             </div>
-            <div class="background-img">
-                <div class="background-img-inner"></div>
+            <img src="img/technical.png" alt="" />
+            <div class="text-block-7">
+               <p>
+                  GAMING<br />
+                  DEVELOPMENT
+               </p>
             </div>
-        </section>
-        <section>
-            <div class="team">
-                <div class="content">
-                    <h2><b>Our Team.</b></h2>
-                    <p id="description">
-                        Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
-                        ambitious minds working collaboratively to bring your wildest dreams to life.
-                    </p>
-                </div>
-                <div class="cards">
-                    <div class="column">
-                        <div class="imageBox"><img src="img/user1.png" style="width: 100%; height: auto;" /></div>
-                        <div class="text-block-1">
-                            <h4>Name Name</h4>
-                            <p>Job Title</p>
-                        </div>
-                        <div class="imageBox"><img src="img/user2.png" style="width: 100%; height: auto;" /></div>
-                        <div class="text-block-2">
-                            <h4>Name Name</h4>
-                            <p>Job Title</p>
-                        </div>
-                        <div class="imageBox"><img src="img/user3.png" style="width: 100%; height: auto;" /></div>
-                        <div class="text-block-3">
-                            <h4>Name Name</h4>
-                            <p>Job Title</p>
-                        </div>
-                        <div class="imageBox"><img src="img/user4.png" style="width: 100%; height: auto;" /></div>
-                        <div class="text-block-4">
-                            <h4>Name Name</h4>
-                            <p>Job Title</p>
-                        </div>
-                    </div>
-                </div>
+         </div>
+         <div class="read-more">
+            <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
+         </div>
+      </section>
+   </body>
+   <footer>
+      <div class="footer-wrapper">
+         <div class="footer-section">
+            <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
+            <p class="company-description">Tut dannie dlya nashei company</p>
+         </div>
+         <div class="footer-section" id="buttons">
+            <div class="href-buttons">
+               <a href="#" class="footer-button">Solutions</a>
+               <a href="#" class="footer-button">Services</a>
+               <a href="#" class="footer-button">About us</a>
+               <a href="#" class="footer-button">Blog</a>
+               <div class="footer-button">
+               </div>
+               <button>Contact us</button>
             </div>
-        </section>
-        <section class="directions">
-            <div class="our-directions">
-                <p>Our direction and promising</p>
-                <p>areas of development</p>
-            </div>
-            <div class="text-cards">
-                <div class="text-block-5">
-                    <p>
-                        FINANCIAL<br />
-                        SOFTWARE
-                    </p>
-                </div>
-                <img src="img/financial.png" alt="" />
-                <div class="text-block-6">
-                    <p>
-                        ADMINISTRATIVE<br />
-                        SOFTWARE
-                    </p>
-                </div>
-                <img src="img/technical.png" alt="" />
-                <div class="text-block-7">
-                    <p>
-                        GAMING<br />
-                        DEVELOPMENT
-                    </p>
-                </div>
-            </div>
-            <div class="read-more">
-                <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
-            </div>
-        </section>
-    </body>
-    <footer>
-        <div class="footer-wrapper">
-            <div class="footer-section">
-              <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
-              <p class="company-description">Tut dannie dlya nashei company</p>
-            </div>
-            <div class="footer-section" id="buttons">
-              <div class="href-buttons">
-              <a href="#" class="footer-button">Solutions</a>
-              <a href="#" class="footer-button">Services</a>
-              <a href="#" class="footer-button">About us</a>
-              <a href="#" class="footer-button">Blog</a>
-              <div class="footer-button">
-                </div>
-                <button>Contact us</button>
-            </div>
-            </div>
-            <div class="footer-section"></div>
-            <div class="footer-section" id="social">
-              <p>Follow Us On:</p>
-              <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
-              <span><br><br><br><br><br><br><br>© 2022 Tech Titans.<br>All rights reserved.</span>
-            </div> 
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script/script.js"></script>
+         </div>
+         <div class="footer-section"></div>
+         <div class="footer-section" id="social">
+            <p>Follow Us On:</p>
+            <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
+            <span><br><br><br><br><br><br><br>© 2022 Tech Titans.<br>All rights reserved.</span>
+         </div>
+      </div>
+   </footer>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script src="script/script.js"></script>
 </html>
