--- a/solutions.html
+++ b/solutions.html
@@ -1,119 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <link rel="stylesheet" href="css/solutions.css" />
-        <link rel="stylesheet" href="css/header.css" />
-        <link rel="stylesheet" href="css/footer.css" />
-        <title>TechTitans</title>
-    </head>
-    <header>
-        <div class="header">
-            <div class="logo">
-                <img src="img/logo.png" alt="Logo" />
-                <div class="company-name">Tech Titans</div>
-            </div>
-            <div class="subpages">
-                <a href="index.html" class="subpage-item">Home</a>
-                <a href="#" class="subpage-item" style="color: #729fce">Solutions</a>
-                <a href="#" class="subpage-item">Vision</a>
-                <a href="#" class="subpage-item">Software</a>
-                <a href="#" class="subpage-item">Blog</a>
-            </div>
-            <div>
-                <button class="header-button">Language</button>
-            </div>
-        </div>
-    </header>
-    <body>
-        <section>
-            <div class="business">
-            <h2>Revolutionize Your Business<br>
-            with Tech Titans<h2>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+      <link rel="stylesheet" href="css/solutions.css" />
+      <link rel="stylesheet" href="css/header.css" />
+      <link rel="stylesheet" href="css/footer.css" />
+      <title>TechTitans</title>
+   </head>
+   <header>
+      <div class="header">
+         <div class="logo">
+            <img src="img/logo.png" alt="Logo" />
+            <div class="company-name">Tech Titans</div>
+         </div>
+         <div class="subpages">
+            <a href="index.html" class="subpage-item">Home</a>
+            <a href="#" class="subpage-item" style="color: #729fce">Solutions</a>
+            <a href="vision.html" class="subpage-item">Vision</a>
+            <a href="#" class="subpage-item">Software</a>
+            <a href="#" class="subpage-item">Blog</a>
+         </div>
+         <div>
+            <button class="header-button">Language</button>
+         </div>
+      </div>
+   </header>
+   <body>
+      <section>
+         <div class="business">
+            <h2>
+            Revolutionize Your Business<br>
+            with Tech Titans
+            <h2>
             <p>Our Services</p>
+         </div>
+      </section>
+      <section>
+         <div class="services">
+            <table style="width: 90%">
+               <tr class="software">
+                  <td class="smaller"><img src="img/cloud.png" alt=""></td>
+                  <td class="software-description">
+                     <h2>Innovative Software Solutions</h2>
+                     <p>At Tech Titans, we are dedicated to providing cutting-edge software solutions that<br>
+                        help businesses stay ahead of the curve. Whether you need to streamline your<br>
+                        financial or administrative processes, or develop custom software tailored to your<br>
+                        unique needs, we have the expertise to deliver results. Our team of experienced<br>
+                        developers and data scientists work tirelessly to ensure that our clients receive the<br>
+                        most innovative solutions possible.
+                     </p>
+                  </td>
+               </tr>
+               <tr class="data-management">
+                  <td class="smaller"><img src="/img/layers.png" alt=""></td>
+                  <td>
+                     <h2>Data Management and Insight</h2>
+                     <p>In today's data-driven world, it's more important than ever to effectively manage and<br>
+                        analyze your data. At Tech Titans, we offer comprehensive data management<br>
+                        solutions that help you make better business decisions. Our data scientists use the<br>
+                        latest tools and techniques to extract insights from your data, and our developers can<br>
+                        design custom dashboards and reporting solutions that give you the information you<br>
+                        need at a glance.
+                     </p>
+                  </td>
+               </tr>
+               <tr class="custom-app">
+                  <td class="smaller"><img src="/img/process.png" alt=""></td>
+                  <td>
+                     <h2>Custom Application Development</h2>
+                     <p>At Tech Titans, we understand that every business has unique needs that can't always<br>
+                        be met by off-the-shelf software solutions. That's why we offer custom application<br>
+                        development services that are tailored to your specific requirements. Whether you<br>
+                        need a new web application, mobile app, or desktop software, our team can help you<br>
+                        design and develop a solution that meets your exact needs.
+                     </p>
+                  </td>
+               </tr>
+               <tr class="support">
+                  <td class="smaller"><img src="/img/customer-service.png" alt=""></td>
+                  <td>
+                     <h2>Exceptional Customer Support</h2>
+                     <p>At Tech Titans, we believe that exceptional customer support is just as important as<br>
+                        great software. That's why we offer full customer experience services, including<br>
+                        training, documentation, and ongoing support. Our team is always available to<br>
+                        answer your questions and provide the assistance you need to get the most out of<br>
+                        our software solutions.
+                     </p>
+                  </td>
+               </tr>
+            </table>
+         </div>
+      </section>
+   </body>
+   <footer>
+      <div class="footer-wrapper">
+         <div class="footer-section">
+            <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
+            <p class="company-description">Tut dannie dlya nashei company</p>
+         </div>
+         <div class="footer-section" id="buttons">
+            <div class="href-buttons">
+               <a href="#" class="footer-button">Solutions</a>
+               <a href="#" class="footer-button">Services</a>
+               <a href="#" class="footer-button">About us</a>
+               <a href="#" class="footer-button">Blog</a>
+               <div class="footer-button">
+               </div>
+               <button>Contact us</button>
             </div>
-        </section>
-
-        <section>
-            <div class="services">
-                <table style="width: 90%">
-                    <tr class="software">
-                        <td class="smaller"><img src="img/cloud.png" alt=""></td>
-                        <td class="software-description">
-                            <h2>Innovative Software Solutions</h2>
-                            <p>At Tech Titans, we are dedicated to providing cutting-edge software solutions that<br>
-                            help businesses stay ahead of the curve. Whether you need to streamline your<br>
-                            financial or administrative processes, or develop custom software tailored to your<br>
-                            unique needs, we have the expertise to deliver results. Our team of experienced<br>
-                            developers and data scientists work tirelessly to ensure that our clients receive the<br>
-                            most innovative solutions possible.</p>
-                        </td>
-                    </tr>
-                    <tr class="data-management">
-                        <td class="smaller"><img src="/img/layers.png" alt=""></td>
-                        <td>
-                            <h2>Data Management and Insight</h2>
-                            <p>In today's data-driven world, it's more important than ever to effectively manage and<br>
-                            analyze your data. At Tech Titans, we offer comprehensive data management<br>
-                            solutions that help you make better business decisions. Our data scientists use the<br>
-                            latest tools and techniques to extract insights from your data, and our developers can<br>
-                            design custom dashboards and reporting solutions that give you the information you<br>
-                            need at a glance.</p>
-                        </td>
-                    </tr>
-                    <tr class="custom-app">
-                        <td class="smaller"><img src="/img/process.png" alt=""></td>
-                        <td>
-                            <h2>Custom Application Development</h2>
-                            <p>At Tech Titans, we understand that every business has unique needs that can't always<br>
-                            be met by off-the-shelf software solutions. That's why we offer custom application<br>
-                            development services that are tailored to your specific requirements. Whether you<br>
-                            need a new web application, mobile app, or desktop software, our team can help you<br>
-                            design and develop a solution that meets your exact needs.</p>
-                        </td>
-                    </tr>
-                    <tr class="support">
-                        <td class="smaller"><img src="/img/customer-service.png" alt=""></td>
-                        <td>
-                            <h2>Exceptional Customer Support</h2>
-                            <p>At Tech Titans, we believe that exceptional customer support is just as important as<br>
-                            great software. That's why we offer full customer experience services, including<br>
-                            training, documentation, and ongoing support. Our team is always available to<br>
-                            answer your questions and provide the assistance you need to get the most out of<br>
-                            our software solutions.</p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-    </body>
-    <footer>
-        <div class="footer-wrapper">
-            <div class="footer-section">
-              <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
-              <p class="company-description">Tut dannie dlya nashei company</p>
-            </div>
-            <div class="footer-section" id="buttons">
-              <div class="href-buttons">
-              <a href="#" class="footer-button">Solutions</a>
-              <a href="#" class="footer-button">Services</a>
-              <a href="#" class="footer-button">About us</a>
-              <a href="#" class="footer-button">Blog</a>
-              <div class="footer-button">
-                </div>
-                <button>Contact us</button>
-            </div>
-            </div>
-            <div class="footer-section"></div>
-            <div class="footer-section" id="social">
-              <p>Follow Us On:</p>
-              <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
-              <span><br><br><br><br><br><br><br>© 2022 Tech Titans.<br>All rights reserved.</span>
-            </div> 
-        </div>
-    </footer>
+         </div>
+         <div class="footer-section"></div>
+         <div class="footer-section" id="social">
+            <p>Follow Us On:</p>
+            <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
+            <span><br><br><br><br><br><br><br>© 2022 Tech Titans.<br>All rights reserved.</span>
+         </div>
+      </div>
+   </footer>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script src="script/script.js"></script>
 </html>
